* items can now contain data as lists of other folders or items * items can now be saved individually * added tests for helper methods on Protocol class

--- a/HiriseLib/HiriseLib.csproj
+++ b/HiriseLib/HiriseLib.csproj
@@ -13,5 +13,10 @@
       <HintPath>..\..\ShUtilities\bin\Release\net5.0\ShUtilities.dll</HintPath>
     </Reference>
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>HiriseTest</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
 </Project>
